@@ -20,6 +20,7 @@
 #include <sstream>
 #include <iomanip>
 #include <regex.h>
+#include <locale.h>
 
 namespace GParted
 {
@@ -353,6 +354,18 @@ Glib::ustring Utils::cleanup_cursor( const Glib::ustring & text )
 		}
 	}
 	return str;
+}
+
+Glib::ustring Utils::get_lang()
+{
+	//Extract base language from string that may look like "en_CA.UTF-8"
+	//  and return in the form "en-CA"
+	Glib::ustring lang = setlocale( LC_CTYPE, NULL ) ;
+	Glib::ustring sought = "_" ;
+	Glib::ustring replacement = "-" ;
+	lang = Utils::regexp_label( lang .c_str(), "^([^.]*)") ;
+	lang .replace( lang .find(sought), sought .size(), replacement ) ;
+	return lang ;
 }
 
 
