@@ -1,5 +1,8 @@
 2008-10-16  Curtis Gedak  <gedakc@gmail.com>
 
+	* include/Utils.h,
+	  src/Utils.cc: Created function get_lang()
+
 	* src/main.cc: Update copyright years
 
 2008-10-15  Curtis Gedak  <gedakc@gmail.com>
